more static problems on server

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ title or 'Elections' }}</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/piratar.css') }}">
-  <!--link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"-->
+  <link rel="stylesheet" href="{{ staticv('css/piratar.css') }}">
 </head>
 <body>
   <header class="header">
