--- a/app/templates/admin/create_election.html
+++ b/app/templates/admin/create_election.html
@@ -69,5 +69,5 @@
 <!-- 24h picker -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr" defer></script>
-<script src="{{ url_for('static', filename='js/election_form.js') }}" defer></script>
+<script src="{{ staticv('js/election_form.js') }}" defer></script>
 {% endblock %}
