--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>{{ title or 'Elections' }}</title>
   <link rel="stylesheet" href="{{ staticv('css/piratar.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" sizes="any">
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
   <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
   <meta name="theme-color" content="#1F0831">
-  
+
 </head>
 <body>
   <header class="header">
